--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,87 @@
+body {
+  margin: 0 auto;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  z-index: 0;
+}
+
+.inner {
+  margin-top: 100px;
+  position: relative;
+  z-index: 1;
+}
+
+li {
+  list-style: none;
+}
+
+button {
+  margin-right: 10px;
+  border-radius: 15%;
+}
+
 .hidden {
   display: none;
+}
+
+h1,
+h2,
+#todo-form {
+  display: flex;
+  justify-content: center;
+}
+#todo-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input {
+  border: none;
+  outline: 0;
+  border-bottom: 2px solid black;
+}
+
+#todo-form {
+  width: 100%;
+  margin-top: 10px;
+}
+
+#todo-form input {
+  width: 300px;
+  height: 20px;
+  transition: all 2s linear;
+  background-color: 0;
+}
+
+#todo-form input::placeholder {
+  text-align: center;
+}
+
+#todo-form input:focus {
+  border-bottom: 2px solid yellow;
+}
+
+#weather {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin-right: 20px;
+  color: white;
+  font-weight: 600;
+}
+
+#quote {
+  display: flex;
+  flex-direction: column;
+  align-items: Center;
+  margin-bottom: 10px;
+  color: white;
+  font-size: 30px;
 }
